@startuml

skinparam classAttributeIconSize 0

' =========================================
' UTILISATEUR
' =========================================

class Utilisateur {
    - id : int
    - nom : string
    - prenom : string
    - email : string
    - password : string
    - role : string
    - actif : bool

    + seConnecter() : bool
    + seDeconnecter() : void
}

' =========================================
' PRODUITS
' =========================================

class Categorie {
    - id : int
    - nom : string
    - description : string

    + ajouterProduit() : void
}

class Produit {
    - id : int
    - nom : string
    - reference : string
    - prixAchat : float
    - prixVente : float
    - stock : int
    - stockMinimum : int
    - actif : bool

    + augmenterStock(qte : int) : void
    + diminuerStock(qte : int) : void
    + estEnRupture() : bool
    + estStockCritique() : bool
}

Categorie "1" --> "0..*" Produit

' =========================================
' CLIENT
' =========================================

class Client {
    - id : int
    - nom : string
    - prenom : string
    - telephone : string
    - email : string
    - adresse : string

    + obtenirDette() : float
}

Client "1" --> "0..*" Vente

' =========================================
' FOURNISSEUR
' =========================================

class Fournisseur {
    - id : int
    - nom : string
    - telephone : string
    - email : string
    - adresse : string

    + approvisionner() : void
}

Fournisseur "1" --> "0..*" Approvisionnement

' =========================================
' VENTE
' =========================================

class Vente {
    - id : int
    - date : DateTime
    - total : float
    - modePaiement : string
    - statut : string

    + ajouterProduit() : void
    + calculerTotal() : float
    + valider() : bool
    + annuler() : void
}

class LigneVente {
    - id : int
    - quantite : int
    - prixUnitaire : float
    - sousTotal : float

    + calculerSousTotal() : float
}

Vente "1" *-- "1..*" LigneVente
Produit "1" --> "0..*" LigneVente

Utilisateur "1" --> "0..*" Vente

' =========================================
' DETTE
' =========================================

class Dette {
    - id : int
    - montant : float
    - montantPaye : float
    - reste : float
    - dateCreation : DateTime
    - statut : string

    + calculerReste() : float
    + enregistrerPaiement() : void
    + estSoldee() : bool
}

class Paiement {
    - id : int
    - montant : float
    - date : DateTime
    - modePaiement : string

    + enregistrer() : bool
}

Client "1" --> "0..*" Dette
Dette "1" *-- "0..*" Paiement
Vente "0..1" --> "0..1" Dette

' =========================================
' APPROVISIONNEMENT
' =========================================

class Approvisionnement {
    - id : int
    - date : DateTime
    - total : float
    - statut : string

    + ajouterProduit() : void
    + calculerTotal() : float
    + receptionner() : void
}

class LigneApprovisionnement {
    - id : int
    - quantite : int
    - prixUnitaire : float
    - sousTotal : float

    + calculerSousTotal() : float
}

Approvisionnement "1" *-- "1..*" LigneApprovisionnement
Produit "1" --> "0..*" LigneApprovisionnement

Utilisateur "1" --> "0..*" Approvisionnement

@enduml
